--- a/index.html
+++ b/index.html
@@ -38,32 +38,32 @@
                 <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="#">地平线月球基地</a> </li>
               </ul>
             </li>
-            <li class="navbar-navigation-root-item"><a class="navbar-navigation-root-link" href="history.html">我们的公开组织</a>
+            <li class="navbar-navigation-root-item"><a class="navbar-navigation-root-link" href="#">我们的公开组织</a>
               <ul class="navbar-navigation-dropdown rd-navbar-dropdown">
                 <li class="navbar-navigation-back">
                   <button class="navbar-navigation-back-btn">返回</button>
                 </li>
-                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="team-member.html">加入我们</a> </li>
-                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="team-member.html">向我们投稿</a> </li>
+                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="#">加入我们</a> </li>
+                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="#">向我们投稿</a> </li>
               </ul>
             </li>
-            <li class="navbar-navigation-root-item"><a class="navbar-navigation-root-link" href="nova2022/nova2022.html">我们的项目/计划</a>
+            <li class="navbar-navigation-root-item"><a class="navbar-navigation-root-link" href="#">我们的项目/计划</a>
               <ul class="navbar-navigation-dropdown rd-navbar-dropdown">
                 <li class="navbar-navigation-back">
                   <button class="navbar-navigation-back-btn">返回</button>
                 </li>
-                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="nova2022/onlystar.html">孤星OS</a> </li>
-                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="nova2022/nebula.html">星云Nebula</a> </li>
-                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="nova2022/starring.html">星环StarRing</a> </li>
-                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="nova2022/asterism.html">星芒Asterism</a> </li>
+                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="#">孤星LoneStar</a> </li>
+                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="#">星云Nebula</a> </li>
+                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="#">星环StarRing</a> </li>
+                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="#">星芒Asterism</a> </li>
               </ul>
             </li>
-            <li class="navbar-navigation-root-item"><a class="navbar-navigation-root-link" href="html/blog.html">我们的其他宣传</a>
+            <li class="navbar-navigation-root-item"><a class="navbar-navigation-root-link" href="#">我们的其他宣传</a>
               <ul class="navbar-navigation-dropdown rd-navbar-dropdown">
                 <li class="navbar-navigation-back">
                   <button class="navbar-navigation-back-btn">返回</button>
                 </li>
-                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="single-post.html">Single post</a> </li>
+                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="#">Single post</a> </li>
               </ul>
             </li>
             <li class="navbar-navigation-root-item"><a class="navbar-navigation-root-link" href="#">开发中页面</a>
@@ -71,22 +71,22 @@
                 <li class="navbar-navigation-back">
                   <button class="navbar-navigation-back-btn">返回</button>
                 </li>
-                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="gallery.html">Gallery</a> </li>
+                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="#">Gallery</a> </li>
                 <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="404.html">404</a> </li>
-                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="coming-soon.html">Coming soon</a> </li>
-                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="privacy-policy.html">Privacy policy</a> </li>
-                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="search-results.html">Search results</a> </li>
+                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="#">开发中</a> </li>
+                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="privacy-policy.html">隐私政策</a> </li>
+                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="#">搜索结果</a> </li>
               </ul>
             </li>
-            <li class="navbar-navigation-root-item"><a class="navbar-navigation-root-link" href="contact-us.html">关于我们</a>
+            <li class="navbar-navigation-root-item"><a class="navbar-navigation-root-link" href="#">关于我们</a>
               <ul class="navbar-navigation-dropdown rd-navbar-dropdown">
                 <li class="navbar-navigation-back">
                   <button class="navbar-navigation-back-btn">Back</button>
                 </li>
-                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="team-member.html">加入我们</a> </li>
-                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="team-member.html">向我们投稿</a> </li>
-                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="team-member.html">关于地平线科技</a> </li>
-                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="team-member.html">去向星河</a> </li>
+                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="#">加入我们</a> </li>
+                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="#">向我们投稿</a> </li>
+                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="#">关于地平线科技</a> </li>
+                <li class="navbar-navigation-dropdown-item"><a class="navbar-navigation-dropdown-link" href="#">去向星河</a> </li>
               </ul>
             </li>
           </ul>
@@ -97,7 +97,7 @@
             <div class="navbar-subpanel-item">
               <div class="navbar-search">
                 <div class="navbar-search-container">
-                  <form class="navbar-search-form" action="search-results.html" method="GET" data-rd-search='{"output":".navbar-search-results","mode":"live","liveResults":3,"template":"<h5 class=\"search-title\"><a target=\"_top\" href=\"#{href}\" class=\"search-link\">#{title}</a></h5><p>...#{token}...</p>"}'>
+                  <form class="navbar-search-form" action="#" method="GET" data-rd-search='{"output":".navbar-search-results","mode":"live","liveResults":3,"template":"<h5 class=\"search-title\"><a target=\"_top\" href=\"#{href}\" class=\"search-link\">#{title}</a></h5><p>...#{token}...</p>"}'>
                     <input class="navbar-search-input" type="text" placeholder="Enter search terms..." autocomplete="off" name="s"/>
                     <button class="navbar-search-btn custom-font-search novi-icon"></button>
                     <button class="navbar-search-close search-switch custom-font-close novi-icon" type="button" data-multi-switch='{"targets":".rd-navbar","scope":".rd-navbar","class":"navbar-search-active","isolate":"[data-multi-switch]:not(.search-switch)"}'></button>
@@ -125,7 +125,7 @@
               <h2>追梦从未止步</h2>
               <p class="big">所有成功都来自于不懈的努力，地平线科技致力于实现梦想，我们正在路上。</p>
               <p class="big">梦想还是要有的，万一实现了呢</p>
-              <a class="btn btn-primary" href="html/2.html">加入我们</a> </div>
+              <a class="btn btn-primary" href="join_us.html">加入我们</a> </div>
           </div>
         </div>
       </div>
@@ -136,7 +136,7 @@
               <h1>Unturned</h1>
               <h3>未转变者服务器现已上线！</h3>
               <p class="big">如果明天就是末日，你会做什么？</p>
-              <a class="btn btn-primary" href="html/1.html">获取详情</a> </div>
+              <a class="btn btn-primary" href="unturned.html">获取详情</a> </div>
           </div>
         </div>
       </div>
@@ -149,7 +149,7 @@
               <p class="big">和我们共筑未来！相信未来无限可能，我们选择踏上征程</p>
               <p class="big">源自星辰，星云Nebula支持的Unturned未转变者服务器</p>
               <p class="big"></p>
-              <a class="btn btn-primary" href="academics.html">获取详情</a> </div>
+              <a class="btn btn-primary" href="2021.html">获取详情</a> </div>
           </div>
         </div>
       </div>
@@ -187,7 +187,7 @@
           <article class="blurb blurb-2" data-animate='{"class":"fadeInUp","delay":".3s"}'>
             <div class="icon blurb-icon custom-font-school"></div>
             <div class="blurb-title h4">校园活动</div>
-            <div class="blurb-text big">还在为校园压力苦恼？还在为下个月的生活费担忧？将压力与乐趣融合，绽放难以想象的花火——想屁吃，洗洗睡吧</div>
+            <div class="blurb-text big">还在为校园压力苦恼？还在为下个月的生活费担忧？如何将压力与乐趣融合，绽放难以想象的花火——别想了，洗洗睡吧</div>
           </article>
         </div>
       </div>
@@ -293,8 +293,8 @@
               <li class="list-item"><a class="link link-inherit" href="#">我们的目标</a></li>
               <li class="list-item"><a class="link link-inherit" href="#">我们的价值</a></li>
               <li class="list-item"><a class="link link-inherit" href="#">关于地平线</a></li>
-              <li class="list-item"><a class="link link-inherit" href="#">EVEonline星战前夜</a></li>
-              <li class="list-item"><a class="link link-inherit" href="#">Minecraft我的世界</a></li>
+              <li class="list-item"><a class="link link-inherit" href="eveonline.html">EVEonline星战前夜</a></li>
+              <li class="list-item"><a class="link link-inherit" href="unturned.html">Unturned未转变者</a></li>
             </ul>
           </div>
           <div class="col-6 col-md-3">
