--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     <div class="footer-bottom bg-700 context-dark text-center">
       <div class="container"> 
         <!-- Copyright-->
-        <p class="rights"><span>&copy; 2020&nbsp;</span><span>HorizonScience&Technology</span><span>. All rights reserved.&nbsp;</span><a class="link link-inherit" href="privacy-policy.html">Privacy Policy</a></p>
+        <p class="rights"><span>&copy; 2020&nbsp;</span><span>HorizonScience&Technology</span><span>. All rights reserved.&nbsp;</span><a class="link link-inherit" href="privacy_policy.html">Privacy Policy</a></p>
       </div>
     </div>
   </footer>
