--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <h2>追梦从未止步</h2>
               <p class="big">所有成功都来自于不懈的努力，地平线科技致力于实现梦想，我们正在路上。</p>
               <p class="big">梦想还是要有的，万一实现了呢</p>
-              <a class="btn btn-primary" href="join_us.html">加入我们</a> </div>
+              <a class="btn btn-primary" href="join.html">加入我们</a> </div>
           </div>
         </div>
       </div>
