--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-md-9 col-lg-7">
-              <h1>新的一年2021！</h1>
+              <h1>BEACON烽火！</h1>
               <h3>2021，全新启程</h3>
-              <p class="big">和我们共筑未来！相信未来无限可能，我们选择踏上征程</p>
-              <p class="big">源自星辰，星云Nebula支持的Unturned未转变者服务器</p>
+              <p class="big">开始A测啦！</p>
+              <p class="big">同时还开通了捐赠渠道~</p>
               <p class="big"></p>
-              <a class="btn btn-primary" href="2021.html">获取详情</a> </div>
+              <a class="btn btn-primary" href="2021.html">最新信息</a> </div>
           </div>
         </div>
       </div>
