--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <p class="big">开始A测啦！</p>
               <p class="big">同时还开通了捐赠渠道~</p>
               <p class="big"></p>
-              <a class="btn btn-primary" href="2021.html">最新信息</a> </div>
+              <a class="btn btn-primary" href="beacon.html">最新信息</a> </div>
           </div>
         </div>
       </div>
